=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 3.03 - In Development

=over

=item *

Fixing bug in the scheduler daemon that resulted in lost MySQL connection
errors. [Michael Peters]

=item *

Fixed some minor bugs with the new Image Transformation. [Michael Peters]

=item *

Upgraded our JSON modules to use the latest JSON::XS. This gives us speed and
better handling of UTF8. [Michael Peters]

=back

=head2 3.02 - July 8th, 2008

=over

=item * 

Added new Image Transformation UI to allow basic image editting 
(scaling, rotating and flipping). [Michael Peters]

=item *

Added API to Krang::HTMLPager to make it possible to control the
display of columns and/or list controls from within row
handlers. [Bodo Schulze]

=item

Made user search check for matches with login instead of just first and last name. [Noam Weinstein]

=item *

Fixed broken templates.kds in Default element library. [Noam Weinstein]

=item *

Stealing a story now logs a discrete action for the theft. [Noam Weinstein]

=item *

Element classes can now override sort order of available children. [Noam Weinstein]

=item *

Open application in a new window/tab if clicking on a navigation link
with the CTRL key pressed or when middle-clicking. [Bodo Schulze]

=item *

Fixed known issues with multiple windows/tabs.  Login/Logout is now
browser-global not window/tab-specific. Use one authentication cookie
to store window_id/session_id mapping for all windows and use
QUERY/tmpl_var communication channel to pass the window_id around.
Also removed config directive MaxConcurrentKrangSessions. [Bodo Schulze]

=item *

Add Fedora 8 as a platform for building. [Michael Peters]

=item *

Added C<Krang::Schedule::Action::archive> to allow scheduled archiving
of stories and media. [Bodo Schulze]

=item *

Script F<bin/krang_upload_templates> uploads templates as UTF-8 if
Charset is UTF-8. [Bodo Schulze]

=item * 
